--- a/style.css
+++ b/style.css
@@ -54,6 +54,21 @@ main{
     align-items: center;
     user-select: none;
 }
+@media only screen and (max-width: 767px) {
+    .header0{
+        width: 80%;
+        margin-left: 10%;
+        height: 6.5vh;
+        position: relative;
+        top: 2vh;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        gap: 0%;
+        align-items: center;
+        user-select: none;
+    }
+}  
 .navbar{
     display: flex;
     flex-direction: row;
